logs/err.log
You have triggered an unhandledRejection, you may have forgotten to catch a Promise rejection:
D:\flutter\secure_qr_scanner\website\node_modules\.bin\vinxi:2
basedir=$(dirname "$(echo "$0" | sed -e 's,\\,/,g')")
          ^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:339:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:242:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)
